--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -84,10 +84,12 @@ ul, menu, dir {
 
 .title {
   text-align: center;
+  font-size: 2rem;
 }
 
 .name {
   text-align: center;
+  font-size: 3.8rem !important;
 }
 
 .jumbotron p {
