--- a/apps/web/assets/stylesheets/application.css
+++ b/apps/web/assets/stylesheets/application.css
@@ -1,3 +1,5 @@
+@import 'experiences.css';
+
 .container {
   color: #222222 !important;
   background-color: #FFFFF9 !important;
@@ -94,4 +96,14 @@ ul, menu, dir {
 
 .jumbotron p {
   text-align: center;
+}
+
+hr {
+  clear: left;
+  background-color: #eeb631;
+  margin-bottom: 3.2rem !important;
+  border: 0;
+  border-top: 1px solid rgba(0,0,0,.1);
+  margin-left: 10%;
+  margin-right: 10%;
 }
