adding skills list

--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: 'personal_info' %>
 <hr id='experience-list'>
 <%= render partial: 'experience-list' %>
+<hr id='skill-list'>
+<%= render partial: 'skill-list' %>
