adding education list

--- a/apps/web/templates/about/_experience-list.html.erb
+++ b/apps/web/templates/about/_experience-list.html.erb
@@ -7,17 +7,17 @@
         <li>
           <div class='xp-item'>
             <div class='xp-title'>
-              <h4><%= I18n.t("templates.about.home.experiences.#{company['name']}.title") %></h4>
-              <p><%= I18n.t("templates.about.home.experiences.#{company['name']}.period") %></p>
+              <h4><%= I18n.t("templates.about.experiences.#{company['name']}.title") %></h4>
+              <p><%= I18n.t("templates.about.experiences.#{company['name']}.period") %></p>
             </div>
             <div class='xp-description'>
               <p>
-                <b><%= I18n.t("templates.about.home.experiences.#{company['name']}.name") %></b>
+                <b><%= I18n.t("templates.about.experiences.#{company['name']}.name") %></b>
               </p>
-              <p><%= I18n.t("templates.about.home.experiences.#{company['name']}.description") %></p>
+              <p><%= I18n.t("templates.about.experiences.#{company['name']}.description") %></p>
               <p>
                 <a href='<%= company['url']%>'>
-                  <%= I18n.t("templates.about.home.experiences.link") %>
+                  <%= I18n.t("templates.about.experiences.link") %>
                 </a>
               </p>
             </div>
