--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -3,3 +3,5 @@
 <%= render partial: 'experience-list' %>
 <hr id='skill-list'>
 <%= render partial: 'skill-list' %>
+<hr id='education-list'>
+<%= render partial: 'education-list' %>
