fixing translations formatting

--- a/apps/web/templates/about/_experience-list.html.erb
+++ b/apps/web/templates/about/_experience-list.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1><%= I18n.t('templates.about.home.experiences.header') %></h1>
+  <h1><%= I18n.t('templates.about.experiences.header') %></h1>
   <div class='xp-list'>
     <ul>
 
