adding interest list

--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -5,3 +5,5 @@
 <%= render partial: 'skill-list' %>
 <hr id='education-list'>
 <%= render partial: 'education-list' %>
+<hr id='interest-list'>
+<%= render partial: 'interest-list' %>
