--- a/public/assets/application.css
+++ b/public/assets/application.css
@@ -1,6 +1,7 @@
 @import 'experiences.css';
 @import 'educations.css';
 @import 'skills.css';
+@import 'interests.css';
 
 .container {
   color: #222222 !important;
