--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -7,3 +7,5 @@
 <%= render partial: 'education-list' %>
 <hr id='interest-list'>
 <%= render partial: 'interest-list' %>
+<hr id='contact-info'>
+<%= render partial: 'contact-info' %>
