--- a/apps/web/assets/stylesheets/experiences.css
+++ b/apps/web/assets/stylesheets/experiences.css
@@ -10,15 +10,33 @@
 
 .xp-item {
   width: 100%;
-  height: 200px;
   margin: auto;
+}
+
+@media only screen and (min-width: 800px) {
+  .xp-item {
+    height: 200px;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .xp-item {
+    margin-bottom: 50px;
+  }
 }
 
 .xp-title {
   color: #EEB631;
-  width: 25%;
-  height: 100%;
-  float: left;
+}
+
+@media only screen and (min-width: 800px) {
+  .xp-title {
+    color: #EEB631;
+    width: 25%;
+    height: 100%;
+    float: left;
+    margin-right: 15px;
+  }
 }
 
 .xp-title p {
@@ -28,11 +46,14 @@
 
 .xp-title h4 {
   font-size: 24px;
+  margin-top: 0;
 }
 
-.xp-description {
-  margin-left: 25%;
-  height: 100%;
+@media only screen and (min-width: 800px) {
+  .xp-description {
+    margin-left: 25%;
+    height: 100%;
+  }
 }
 
 .xp-description p {
