Refactor static date in personal information

--- a/apps/web/templates/about/_personal_info.html.erb
+++ b/apps/web/templates/about/_personal_info.html.erb
@@ -4,7 +4,7 @@
     <h1 class="name">Rodrigo Vasconcelos de Barros</h1>
     <h4 class='title'><%= I18n.t('templates.about.home.title') %></h4>
     <div class="info">
-      <p class="lead"><%= I18n.t('templates.about.home.age') %></p>
+      <p class="lead"><%= I18n.t('templates.about.home.age', age: age) %></p>
       <p><%= I18n.t('templates.about.home.location') %></p>
     </div>
     <div class="pitch">
