--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'personal_info' %>
+<%= render partial: 'personal_info', locals: { age: age_in_years } %>
 <hr id='experience-list'>
 <%= render partial: 'experience-list' %>
 <hr id='skill-list'>
