Add personal info helper and use environment variables for phone and email data

--- a/apps/web/templates/about/_contact-info.html.erb
+++ b/apps/web/templates/about/_contact-info.html.erb
@@ -1,7 +1,7 @@
 <h1><%= I18n.t('templates.about.contact.header') %></h1>
 <div class="contact-box">
-  <p>rodrigopk@gmail.com</p>
-  <p> +49 152 24034168 </p>
+  <p> <%= email %> </p>
+  <p> <%= phone %> </p>
   <div class="social">
     <a href="https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros" target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/linkedin.png">
