--- a/apps/web/templates/about/home.html.erb
+++ b/apps/web/templates/about/home.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'personal_info', locals: { age: age_in_years } %>
+<%= render partial: 'personal_info', locals: { age: age } %>
 <hr id='experience-list'>
 <%= render partial: 'experience-list' %>
 <hr id='skill-list'>
@@ -8,4 +8,4 @@
 <hr id='interest-list'>
 <%= render partial: 'interest-list' %>
 <hr id='contact-info'>
-<%= render partial: 'contact-info' %>
+<%= render partial: 'contact-info', locals: { phone: phone, email: email } %>
