Add NetworkProfiles helper

--- a/apps/web/templates/about/_contact-info.html.erb
+++ b/apps/web/templates/about/_contact-info.html.erb
@@ -3,13 +3,13 @@
   <p> <%= email %> </p>
   <p> <%= phone %> </p>
   <div class="social">
-    <a href="https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros" target="_blank">
+    <a href=<%= linkedin %> target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/linkedin.png">
     </a>
-    <a href="https://github.com/rodrigopk" target="_blank">
+    <a href=<%= github %> target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/github.png">
     </a>
-    <a href="https://twitter.com/_rodrigopk" target="_blank">
+    <a href=<%= twitter %> target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/twitter-icon.png">
     </a>
   </div>
