--- a/apps/web/templates/about/_contact-info.html.erb
+++ b/apps/web/templates/about/_contact-info.html.erb
@@ -9,8 +9,8 @@
     <a href=<%= github %> target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/github.png">
     </a>
-    <a href=<%= twitter %> target="_blank">
-      <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1498082137/seed_data/twitter-icon.png">
+    <a href=<%= mastodon %> target="_blank">
+      <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1554027490/seed_data/mastodon_logo.png">
     </a>
   </div>
 </div>
