--- a/apps/web/templates/about/_contact-info.html.erb
+++ b/apps/web/templates/about/_contact-info.html.erb
@@ -12,5 +12,9 @@
     <a href=<%= mastodon %> target="_blank">
       <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1554027490/seed_data/mastodon_logo.png">
     </a>
+
+    <a href=<%= medium %> target="_blank">
+      <img src="https://res.cloudinary.com/rodrigopk/image/upload/v1554028450/seed_data/medium_icon.png">
+    </a>
   </div>
 </div>
